styles/WelcomePage.module.scss
.welcomePage {
  background: linear-gradient(180deg, #ffffff 50%, #dfd7ff 100%);
  height: 100vh;
  min-height: 50em;
  max-height: 1450px;

  @media (max-width: 740px) {
    height: min-content;
  }

  &::after {
    content: "";
    font-size: clamp(13px, 1.125vw, 16px);
    background-image: url("/assets/white-curve3x.png");
    background-position: center bottom;
    background-repeat: no-repeat;
    background-size: cover;
    position: absolute;
    left: 0;
    right: 0;
    bottom: -1px;
    height: 22vh;
    z-index: 2;
  }
}

.container {
  max-width: 1280px;
  height: 100%;
  display: grid;
  grid-template-rows: 1fr auto;
  position: relative;
  margin-top: 2.5em;
  padding-inline: 2em;
}

.hero {
  align-self: flex-end;
  z-index: 1;
  margin-bottom: 5em;
  padding-inline: 5em;

  .textLogo {
    animation: text-appearence 0.5s ease-out 0.5s both;

    font-size: clamp(13px, 1.125vw, 16px);
    margin-inline: auto;
    width: 6em;
  }

  .imageLogo {
    animation: text-appearence 0.5s ease-out 0.7s both;

    font-size: clamp(7px, 1.125vw, 16px);
    margin-left: auto;
    margin-right: -4vw;
    width: 4em;

    @media (max-width: 740px) {
      margin-right: 1em;
    }
  }

  .title {
    animation: text-appearence 0.5s ease-out 0.6s both;

    background: linear-gradient(89.78deg, #704ee2 0.15%, #926ff7 99.81%);
    background-clip: text;
    -webkit-text-fill-color: transparent;
    font-size: 5em;
    font-weight: 800;
    letter-spacing: -0.06em;
    line-height: 1;
    padding-bottom: 0.2em;
    text-align: center;
  }

  .subtitle {
    animation: text-appearence 1s ease-out 0.7s both;

    color: #454267;
    font-size: max(1rem, 1.4em);
    font-weight: 700;
    line-height: 1.2;
    margin-top: 0.2em;
    text-align: center;
  }
}

.integrationsMobile {
  display: none;

  align-items: center;
  flex-direction: column;
  gap: 3em;
  padding-inline: 2em;
  margin-bottom: 5vh;

  z-index: 1;

  @media (max-width: 740px) {
    display: flex;
  }

  .stores {
    display: flex;
    gap: 1em;
  }

  .iphone {
    animation: iphone-appearence 1s cubic-bezier(0, 0.6, 0.32, 1) 0.1s both;
  }
}

.scrollIconContainer {
  animation: text-appearence 1s ease-out 2s both;

  position: absolute;
  bottom: 4%;
  left: 50%;
  z-index: 2;

  @media (max-width: 740px) {
    display: none;
  }
}

@keyframes iphone-appearence {
  0% {
    opacity: 0;
    transform: translate(0, 100%);
  }
  100% {
    opacity: 1;
    transform: translate(0, 0);
  }
}

@keyframes text-appearence {
  0% {
    opacity: 0;
    transform: translate(0, 30%);
  }
  100% {
    opacity: 1;
    transform: translate(0, 0);
  }
}

@keyframes store-appearence {
  0% {
    opacity: 0;
    transform: translate(0, 100%);
  }
  100% {
    opacity: 1;
    transform: translate(0, 0);
  }
}

